updating home page with shortcuts and news

--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,10 @@ markdown: kramdown
 
 permalink: pretty
 
+paginate: 10
+paginate_path: "news/page:num/"
+
 port: 8000
+
+plugins:
+  - jekyll-paginate
