tweaking the slogan

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: "ATLAS-D2K Center"
 
-description: "The ATLAS-D2K is bringing data to knowledge for biomedical researchers in the kidney and lower urinary tract domains."
+description: "The ATLAS-D2K is transforming data into knowledge for biomedical researchers in the kidney and lower urinary tract domains."
 
 markdown: kramdown
 
