--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ name: "ATLAS-D2K Center"
 
 description: "The ATLAS-D2K is transforming data into knowledge for biomedical researchers in the kidney and lower urinary tract domains."
 
+url: https://informatics-isi-edu.github.io/atlas-d2k-www/
+
 markdown: kramdown
 
 permalink: pretty
@@ -16,7 +18,7 @@ pagination:
   per_page: 10
   permalink: "/page:num/"
   sort_reverse: true
-  
+
 
 scholar:
   bibliography: '**/*.bib'
